--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@material-ui/core": "^4.8.3",
         "@material-ui/styles": "^4.8.2",
+        "node-sass": "^4.13.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.3.0"
