--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@date-io/core": "^1.3.6",
+        "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.8.3",
+        "@material-ui/pickers": "^3.2.9",
         "@material-ui/styles": "^4.8.2",
+        "date-fns": "^2.9.0",
         "node-sass": "^4.13.1",
+        "prop-types": "^15.6.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-scripts": "3.3.0"
