--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@date-io/core": "^1.3.6",
         "@date-io/date-fns": "^1.3.13",
         "@material-ui/core": "^4.8.3",
+        "@material-ui/icons": "^4.5.1",
         "@material-ui/pickers": "^3.2.9",
         "@material-ui/styles": "^4.8.2",
         "date-fns": "^2.9.0",
