--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@material-ui/styles": "^4.8.2",
         "date-fns": "^2.9.0",
         "node-sass": "^4.13.1",
+        "parcel": "^1.12.4",
         "prop-types": "^15.6.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
